# learncast-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: deploy-dev.yml
app/: Cargo.toml
app/src/: main.rs
lib/: Cargo.toml  build.rs
lib/locales/en/: strings.ftl
lib/migrations/: 001_initial.sql
lib/src/: api_docs.rs  app.rs  config.rs  lib.rs
lib/src/db/: mod.rs  postgres.rs
lib/src/db/author/: entity.rs  repo.rs
lib/src/db/lesson/: entity.rs  repo.rs
lib/src/db/session/: entity.rs  repo.rs
lib/src/db/snip/: repo.rs
lib/src/db/topic/: repo.rs
lib/src/db/user/: repo.rs
lib/src/error/: auth.rs  author.rs  mod.rs
lib/src/extractor/: mod.rs
lib/src/middleware/: auth.rs  cache.rs
lib/src/module/common/: base.rs  enums.rs
lib/src/module/user/: mod.rs
lib/src/utils/: cursor.rs  mod.rs  telegram.rs
src/: app.rs  config.rs  main.rs  state.rs
src/db/lesson/: repo.rs
src/db/migrations/: 001_initial.sql
src/db/session/: entity.rs  repo.rs
src/db/snip/: entity.rs  repo.rs
src/db/topic/: entity.rs  repo.rs
src/db/user/: entity.rs  repo.rs
src/error/: lesson.rs  snip.rs  topic.rs
src/extractor/: accept_language.rs
src/locales/uz/: strings.ftl
src/middleware/: auth.rs  mod.rs
src/module/: mod.rs
src/module/admin/: mod.rs
src/module/admin/auth/: controller.rs
src/module/admin/author/: controller.rs  dto.rs  mapper.rs
src/module/admin/lesson/: controller.rs  routes.rs
src/module/admin/topic/: controller.rs  dto.rs  mapper.rs
src/module/common/: mod.rs  paging.rs
src/module/common/auth/: dto.rs  service.rs
src/module/common/author/: dto.rs  mapper.rs  service.rs
src/utils/: jwt.rs  mod.rs
(+58 files in other folders)
