[package]
name = "learncast"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "learncast"
path = "src/main.rs"

[dependencies]
#network
axum = { version = "0.8.7", features = ["macros", "json", "multipart"] }
axum-extra = { version = "0.12.2", features = ["typed-header", "cookie"] }
tokio = { version = "1.48.0", features = ["full"] }
headers = "0.4.1"
tower-http = { version = "0.6.7", features = ["tracing", "trace", "cors"] }
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }

validator = { version = "0.20.0", features = ["derive"] }

#json
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

#docs
utoipa = { version = "5.4.0", features = ["time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

#db
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "time"] }
redis = { version = "1.0.0", features = ["tokio-comp"] }

#s3
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.119.0"

#localization
fluent-templates = "0.13.2"

#log
log = "0.4.28"

#google
google-cloud-auth = { version = "1.3.0", features = ["idtoken"] }

jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["alloc"] }
uuid = { version = "1.19.0", features = ["v4"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
infer = "0.19.0"
ffmpeg-light = "0.2.0"
smart-default = "0.7.1"
dotenvy = "0.15"

[build-dependencies]
fluent-syntax = "0.12.0"

